# gtranscode

./: .gitignore  .tm_project.cache  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO.tasks  aclocal.m4  configure  configure.in  gtranscode.desktop  gtranscode.desktop.in.in  gtranscode.glade  gtranscode.gladep  gtranscode.prj
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: Makefile.am  Makefile.in  gtranscode.h
po/: POTFILES.in  en_GB.po  fr.po
src/: Makefile.am  Makefile.in  gtranscode-gst-handlers.c  gtranscode-transcode.c  gtranscode-ui-handlers.c  gtranscode.h  main.c
