## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

gtranscode_includedir = $(pkgincludedir)

gtranscode_include_DATA = \
	gtranscode.h

EXTRA_DIST = $(gtranscode_include_DATA)
